# openVag

./: CMakeLists.txt  LICENSE  changelog.md
cmake-modules/: FindImGuiFileDialog.cmake  Findimgui.cmake  Findimgui_node_editor.cmake  Findtinyxml2.cmake
docs/: README.md
openVag/: CMakeLists.txt  GraphLayout.cpp  GraphLayout.h  IRModel.cpp  IRModel.cpp.BASE.cpp  IRModel.cpp.LOCAL.cpp  IRModel.cpp.REMOTE.cpp  IRModel.h  IRModel.h.BASE.h  IRModel.h.LOCAL.h  IRModel.h.REMOTE.h  IRXmlRep.h  LayerNode.h  LayerNodeGui.h  OpenVag.cpp  OpenVag.h  main.cpp  openVag_default_ini.h  parseIRModel.cpp  parseIRModel.h
openVag/Canvas/: beginCreate.cpp  beginCreate.h  calcLayersToDraw.cpp  calcLayersToDraw.h  contextMenu.cpp  contextMenu.h  copySelectedItems.cpp  copySelectedItems.h  drawEdges.cpp  drawEdges.h  drawLayerNodes.cpp  drawLayerNodes.h  pasteClipboardText.cpp  pasteClipboardText.h  showCanvas.cpp  showCanvas.h
openVag/Find/: showFind.cpp  showFind.h
openVag/Properties/: fillEdgeProperties.cpp  fillEdgeProperties.h  fillLayerProperties.cpp  fillLayerProperties.h  showProperties.cpp  showProperties.h
openVag/Resources/: openVag.aps
openVag/Validation/: showValidation.cpp  showValidation.h
openVag/commands/: CommandCenter.cpp  CommandCenter.h  ComposedCommand.h  DeleteEdge.cpp  DeleteInputPort.cpp  DeleteLayer.cpp  DeleteLayer.h  DeleteOutputPort.cpp  DeleteOutputPort.h  ICommand.cpp  ICommand.h  InsertEdge.cpp  InsertInputPort.cpp  InsertLayer.cpp  InsertLayer.h  InsertOutputPort.cpp  InsertOutputPort.h  ModifyEdge.cpp  ModifyEdge.h  RemoveEdge.h  RemoveLayer.cpp  RemoveLayer.h  RemoveXMLElement.cpp  SetLayerAttributes.cpp  SetLayerAttributes.h  SetPortAttributes.cpp  SetPortAttributes.h  SetPortDimensions.cpp  SetPortDimensions.h
openVag/misc/debugger/: openVag.natstepfilter
openVag/openVagGui/: CMakeLists.txt  CreateLayerNodeGui.cpp  CreateLayerNodeGui.h  GraphLayout.cpp  GraphLayout.h  IRModel.cpp  IRModel.h  IRModelGui.cpp  IRModelGui.h  LayerNodeGui.h  OpenVag.cpp  OpenVag.h  XMLNodeWrapper.h  beginCreate.cpp  beginCreate.h  contextMenu.cpp  contextMenu.h  createLayerNodeGui.cpp  createLayerNodeGui.h  createModelEdgesGui.cpp  createModelEdgesGui.h  drawEdges.cpp  drawEdges.h  drawLayerNode.cpp  drawLayerNodes.cpp  drawLayerNodes.h  main.cpp  openVag_default.ini  parseIRModel.cpp  parseIRModel.h
openVag/openVagGui/Canvas/: beginCreate.cpp  beginCreate.h  contextMenu.cpp  contextMenu.h  drawEdges.cpp  drawEdges.h  drawLayerNodes.cpp  drawLayerNodes.h  showCanvas.cpp  showCanvas.h
openVag/openVagGui/Properties/: fillEdgeProperties.cpp  fillEdgeProperties.h  fillLayerProperties.cpp  showEdgeProperties.cpp  showEdgeProperties.h  showProperties.cpp
openVag/openVagGui/Resources/: openVag.rc
openVag/openVagGui/commands/: AddAttributeXMLElement.cpp  AddAttributeXMLElement.h  AddEdge.cpp  AddEdge.h  AddLayer.cpp  AddLayer.h  AddXMLEdge.cpp  AddXMLEdge.h  AddXMLLayer.cpp  AddXMLLayer.h  CommandCenter.cpp  CommandCenter.h  ComposedCommand.cpp  DeleteAttributeXMLElement.cpp  DeleteAttributeXMLElement.h  DeleteEdge.cpp  DeleteEdge.h  DeleteInputPort.cpp  DeleteInputPort.h  DeleteLayer.cpp  DeleteLayer.h  DeleteOutputPort.cpp  DeleteOutputPort.h  ICommand.h  InsertEdge.cpp  InsertEdge.h  InsertInputPort.cpp  InsertInputPort.h  InsertOutputPort.cpp  ModifyAttributeXMLElement.cpp  ModifyAttributeXMLElement.h  ModifyEdge.cpp  ModifyEdge.h  RemoveEdge.cpp  RemoveEdge.h  RemoveEdgeXML.cpp  RemoveEdgeXML.h  RemoveLayer.cpp  RemoveLayer.h  RemoveXMLElement.cpp  (+4 more)
openVag/openVagGui/misc/debugger/: openVag.natstepfilter
openVag/parseIRModel/: CMakeLists.txt  IRXmlRep.h  LayerNode.h  main.cpp  parseIRModel.cpp  parseIRModel.h
openVag/utils/: MapValueIterator.h
test/: LayoutTest.xml  example.xml  example_error.xml  example_simple_error.xml  example_simple_save.xml
test/instance-segmentation-person-0007/FP16/: instance-segmentation-person-0007.xml
test/text-spotting-0005-recognizer-encoder/FP32/: text-spotting-0005-recognizer-encoder.xml
